[package]
name = "apex-omega-singularity"
version = "206.7.0"
edition = "2021"

[dependencies]
# Alloy: Successor to ethers-rs, 2x faster primitives and faster RPC
alloy = { version = "0.1", features = ["full", "pubsub", "rpc-types-eth", "signer-keystore"] }
# REVM: The literal fastest EVM implementation in existence
revm = { version = "35", features = ["std", "serde", "memory_db"] }
# Flashbots support for Alloy
alloy-ethers-type-conversions = "0.1"
# Performance & Graph math
petgraph = "0.6"
rayon = "1.9"
dashmap = "5.5"
tokio = { version = "1", features = ["full", "parking_lot"] }
vader-sentiment = "0.1.0"
core_affinity = "0.8"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen_units = 1
panic = "abort"
